# Brain-Tumor-Segmentaion-on-3D-Slicer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
TumorSeg/: CMakeLists.txt  TumorSeg.py
TumorSeg/Resources/UI/: TumorSeg.ui
